# market-microstructure-execution-cost-research

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_project.py
.github/workflows/: ci.yml
config/: claim_policy.yaml  data_sources.yaml  execution_cost_config.yaml  order_book_config.yaml  project_config.yaml
docs/: data_capability_and_claims_protocol.md  execution_cost_methodology.md  implementation_checklist.md  licence_and_data_redistribution_policy.md  limitations.md  research_methodology_protocol.md
paper/: references.bib  software_paper.md
reports/: market_microstructure_execution_cost_report.html  market_microstructure_execution_cost_report.md
reports/tables/: baseline_model_performance.csv  claim_enforcement_summary.csv  cost_attribution_summary.csv  data_capability_matrix.csv  data_source_audit.csv  event_intensity_summary.csv  execution_sensitivity_summary.csv  feed_integrity_summary.csv  final_claim_boundary_audit.csv  final_figure_registry.csv  final_quality_gate.csv  final_release_exclusions.csv  final_release_manifest.csv  final_table_registry.csv  imbalance_summary.csv  (+27 more)
tests/: conftest.py  test_claim_enforcement.py  test_claim_enforcement_stage4c.py  test_execution.py  test_impact_release.py  test_impact_release_stage4c.py  test_labels_intensity_models_stage4c.py  test_module_behaviour.py  test_order_book_features_stage4c.py  test_project_audit.py  test_reporting.py  test_reporting_stage4c.py  test_repro_quality_scope.py  test_schema_and_fixture.py  test_slippage_schedule_fill.py  test_source_audit.py  test_stage4b_modules.py
(+53 files in other folders)
