[project]
name = "market-microstructure-execution-cost-system"
version = "0.1.0"
description = "Claim-aware market microstructure, order book and execution cost research system."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Joseph N. Njiru" },
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pandera>=0.20",
    "pyarrow>=15.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microstructure_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
